# pallet-assets-chain-extension

./: Cargo.toml  README.md
src/: ink.rs  lib.rs  substrate.rs  traits.rs
