[package]
authors = ["727.Ventures <green@727.ventures>"]
edition = "2021"
name = "pallet-assets-chain-extension"
version = "0.1.1"

[dependencies]
# Common deps
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
obce = { git = "https://github.com/727-Ventures/obce", branch = "feature/ink-4", default-features = false }

# Substrate deps
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }

# Ink deps
ink = { version = "4.0.0-beta", default-features = false, optional = true }

[features]
default = ["std"]
substrate = [
	"obce/substrate",
	"pallet-assets",
]
ink-lang = [
	"obce/ink",
	"ink",
]
std = [
	"scale-info/std",
	"scale/std",
]
substrate-std = [
	"std",
	"substrate",
	"obce/substrate-std",
	"pallet-assets/std",
]
ink-std = [
	"std",
	"ink-lang",
	"obce/ink-std",
	"ink",
]
runtime-benchmarks = [
	"obce/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
]